[package]
name = "sekai-bg"
version = "0.1.1"
edition = "2024"
authors = ["39Choko"]
license = "MIT"
license-file = "LICENSE.md"

[dependencies]
indexmap = { version = "2.2.6", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
image = { version = "0.25", features = ["webp"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.58.0", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
] }
wait = "0.2.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
